# ComfyUI-Spark

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt  upstream_sync.md
comfy/: cache_policy.py  cli_args.py  clip_vision.py  model_base.py  model_management.py  model_patcher.py  sd.py  utils.py
comfy/audio_encoders/: audio_encoders.py
comfy/ldm/hunyuan_video/: upsampler.py
comfy/ldm/modules/: attention.py
comfy/text_encoders/: flux.py
comfy_extras/: nodes_model_patch.py  nodes_post_processing.py
dev-docs/: codebase-exploration-model-loading.md  dgx-spark-comfyui-loader-plan.md  spark-source-build-candidates.md  transformers-5x-memory-regression.md
dev-docs/spark-port-pending/: 3ae4cb9-spark-instruct-loader.patch  README.md  hunyuan_instruct_nodes.py.spark-snapshot
docs/superpowers/specs/: 2026-04-05-unified-memory-loading-design.md  2026-04-12-hunyuan3-instruct-spark-optimizations-design.md
tests-unit/comfy_test/: test_cache_policy.py  test_memory_report.py  test_mid_load_page_cache_drop.py
