[project]
name = "ComfyUI"
version = "0.20.1"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.2.1",
    "aiohttp>=3.11.8",
    "alembic>=1.18.4",
    "av>=14.2.0",
    "bitsandbytes>=0.48.2",
    "blake3>=1.0.8",
    "comfy-aimdo>=0.2.12",
    "comfy-kitchen>=0.2.8",
    "comfyui-embedded-docs==0.4.3",
    "comfyui-frontend-package==1.42.8",
    "comfyui-workflow-templates==0.9.44",
    "einops>=0.8.2",
    "filelock>=3.25.2",
    "glfw>=2.10.0",
    "huggingface-hub>=0.20.0",
    "kornia>=0.7.1",
    "numpy>=1.26.0",
    "pillow>=11.0.0",
    "psutil>=5.9.0",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "pyopengl>=3.1.10",
    "pyyaml>=6.0.3",
    "requests>=2.32.0",
    "runtime>=0.1.4",
    "safetensors>=0.4.5",
    "scipy>=1.15.3",
    "sentencepiece>=0.2.1",
    "simpleeval>=1.0.0",
    "spandrel>=0.4.2",
    "sqlalchemy>=2.0.49",
    "tokenizers>=0.13.3",
    "torch>=2.8.0",
    "torchaudio>=2.11.0",
    "torchsde>=0.2.6",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "transformers==4.57.3",
    "via>=0.1.2",
    "yarl>=1.18.0",
]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "E",
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]

lint.ignore = ["E501", "E722", "E731", "E712", "E402", "E741"]

exclude = ["*.ipynb", "**/generated/*.pyi"]

[tool.pylint]
master.py-version = "3.10"
master.extension-pkg-allow-list = [
  "pydantic",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
  "too-few-public-methods",
  "too-many-public-methods",
  "too-many-instance-attributes",
  "too-many-positional-arguments",
  "broad-exception-raised",
  "too-many-lines",
  "invalid-name",
  "unused-argument",
  "broad-exception-caught",
  "consider-using-with",
  "fixme",
  "too-many-statements",
  "too-many-branches",
  "too-many-locals",
  "too-many-arguments",
  "too-many-return-statements",
  "too-many-nested-blocks",
  "duplicate-code",
  "abstract-method",
  "superfluous-parens",
  "arguments-differ",
  "redefined-builtin",
  "unnecessary-lambda",
  "dangerous-default-value",
  "invalid-overridden-method",
  # next warnings should be fixed in future
  "bad-classmethod-argument",  # Class method should have 'cls' as first argument
  "wrong-import-order",  # Standard imports should be placed before third party imports
  "ungrouped-imports",
  "unnecessary-pass",
  "unnecessary-lambda-assignment",
  "no-else-return",
  "unused-variable",
]
